--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "alembic (>=1.15.2,<2.0.0)",
     "pwdlib[argon2] (>=0.2.1,<0.3.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "pyjwt (>=2.10.1,<3.0.0)"
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "tzdata (>=2025.2,<2026.0)",
+    "pytz (>=2025.2,<2026.0)"
 ]
 
 [tool.pytest.ini_options]
