--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-DATABASE_URL="sqlite:///database.db"
+POSTGRES_USER=fttuser
+POSTGRES_PASSWORD=fttpassword
+POSTGRES_DB=fttdb
+DATABASE_URL=postgresql://fttuser:fttpassword@db:5432/fttdb
+
+SECRET_KEY=your-secret-key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+
+
