--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "tzdata (>=2025.2,<2026.0)",
-    "pytz (>=2025.2,<2026.0)"
+    "pytz (>=2025.2,<2026.0)",
+    "psycopg[binary] (>=3.2.6,<4.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
 ]
 
 [tool.pytest.ini_options]
@@ -24,7 +26,7 @@ pythonpath = " . "
 addopts = ' -p no:warnings'
 
 [tool.ruff]
-line-length= 79
+line-length= 129
 extend-exclude = ['migrations']
 
 [tool.ruff.lint]
@@ -36,15 +38,15 @@ pytest = "^8.3.5"
 pytest-cov = "^6.0.0"
 taskipy = "^1.14.1"
 ruff = "^0.11.2"
+factory-boy = "^3.3.3"
 
 [tool.taskipy.tasks]
-lint = 'ruff check'
-pre_format = 'ruff check --fix'
-format = 'ruff format'
-run = 'poetry run uvicorn ftt.app:app --reload'
+run = 'fastapi dev ftt/app.py'
 pre_test = 'task lint'
-test = 'pytest -s -x --cov=fast_zero -vv'
+test = 'pytest --cov=ftt -vv -x'
 post_test = 'coverage html'
+lint = 'ruff check . && ruff check . --diff'
+format = 'ruff check . --fix && ruff format .'
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
